@@ -35,6 +35,12 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    kapt {
+        javacOptions {
+            option("-J--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+        }
+    }
 }
 
 dependencies {
